objects/First_Aid__c.object
<CustomObject>
    <fields>
        <fullName>First_Aid_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submit_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Concerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>First Aid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>First_Aids_raised_for_me</fullName>
        <columns>NAME</columns>
        <columns>First_Aid_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>First Aids raised for me</label>
    </listViews>
    <listViews>
        <fullName>My_First_Aids</fullName>
        <columns>NAME</columns>
        <columns>First_Aid_Description__c</columns>
        <columns>Response__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My First Aids</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>First Aid Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Aids</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>First_Aid_Assigned__c</fullName>
        <label>First Aid Assigned</label>
    </sharingReasons>
</CustomObject>